fix cv section shadow behind main

--- a/public/style.css
+++ b/public/style.css
@@ -3042,6 +3042,7 @@ body:not(.contrast).purple .infos-dialog_content {
 
 .cv {
   position: relative;
+  z-index: 0;
   padding: 2rem;
 }
 
