--- a/src/style/sass/Layout/_cvComponent.scss
+++ b/src/style/sass/Layout/_cvComponent.scss
@@ -1,4 +1,5 @@
 .cv {
     position: relative;
+    z-index: 0;
     padding: 2rem;
 }
